  Main services can be easily authenticated using PAM-LDAP, but is harder for Samba.

FreeNAS 0.7.2 (Sabanda):
------------------------

Majors changes:
- Upgrade to FreeBSD 7.3.
- Upgrade unison to 2.32.52.
- Upgrade bsnmp-ucd to 0.3.1.
- Upgrade e2fsprogs to 1.41.11.
- Upgrade smartmontools to 5.39.1.

Minors changes:
- Add Czech and Slovak translations.
- Add multiple CPUs usage.
 
Bug fixes:

Permanent restrictions:
- It is not possible to format a SoftRAID disk with MSDOS FAT16/32.
- It is not possible to encrypt a disk partition, only complete disks are supported.
- It is not possible to get seperate CPU stats per processor on SMP machines because
  FreeBSD does not support that feature.
- Enable 'polling' on interfaces used by a LAGG interface will make it inoperable.

Known bugs:
- If DHCP for IPv4 is used, the IPv6 statically configured DNS server will be
  overriden by the IPv4 DNS server.

NEED TESTING:
- IPv6: auto mode
- All services using IPv6 address (NFS, FTP, etc...)
- Netatalk VFS Samba module (automatically enabled when Netatalk starts) crashes
  samba when accessing to share
- Need to write an online-test procedure

Help needed:
- Need help for adding LDAP authentication feature:
  Main services can be easily authenticated using PAM-LDAP, but is harder for Samba.

FreeNAS 0.7.1 (Shere):
----------------------

Majors changes:
- Upgrade e2fsprogs to 1.41.9.
- Upgrade istgt to version 20100407.
- Upgrade msmtp to 1.4.19.
- Upgrade transmission to 1.92.
- Upgrade PHP to 5.2.12 (Thanks to Xin LI).
- Upgrade fuppes to 0.660.
- Upgrade rsync to 3.0.7.
- Upgrade inadyn-mt to 02.18.14.
- Upgrade netatalk to 2.0.5.
- Upgrade bash to 4.0.35.
- Upgrade lighttpd to 1.4.26.
- Upgrade proftpd to 1.3.2e.
- Upgrade iSCSI initiator to 2.2.4.
- Upgrade sipcalc to 1.1.5.
- Upgrade nano to 2.2.3.

Minors changes:
- Add iSCSI target removable media control.
- Modify Samba default buffer size.
- Modify Tuning values.
- Add new MIB in System|Advanced|sysctl.conf.